RESOLVED FIXED 213798
[iOS] Crash under WebKit::WebPage::getFocusedElementInformation()
https://bugs.webkit.org/show_bug.cgi?id=213798
Summary [iOS] Crash under WebKit::WebPage::getFocusedElementInformation()
Antoine Quint
Reported 2020-06-30 08:07:22 PDT
[iOS] Crash under WebKit::WebPage::getFocusedElementInformation()
Attachments
Patch (2.65 KB, patch)
2020-06-30 08:11 PDT, Antoine Quint
no flags
Antoine Quint
Comment 1 2020-06-30 08:11:25 PDT
Antoine Quint
Comment 2 2020-06-30 08:11:56 PDT
EWS
Comment 3 2020-06-30 08:56:51 PDT
Committed r263752: <https://trac.webkit.org/changeset/263752> All reviewed patches have been landed. Closing bug and clearing flags on attachment 403201 [details].
Darin Adler
Comment 4 2020-06-30 17:16:54 PDT
Comment on attachment 403201 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=403201&action=review > Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:3108 > + for (unsigned index = 0; index < labels->length(); ++index) { > + if (is<Element>(labels->item(index)) && labels->item(index)->renderer()) > + associatedLabels.append(downcast<Element>(*labels->item(index))); > + } Not new to this patch: Is NodeList::item efficient enough that we should call it 3 times rather than putting the result into a local?
Note You need to log in before you can comment on or make changes to this bug.