[iOS] Crash under WebKit::WebPage::getFocusedElementInformation() https://bugs.webkit.org/show_bug.cgi?id=213798 <rdar://problem/62754594>

Reviewed by Wenson Hsieh.

Since LabelableElement::labels() returns a RefPtr<NodeList>, ensure we get a value before attempting to read data from it.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::getFocusedElementInformation):


Canonical link: https://commits.webkit.org/226600@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263752 268f45cc-cd09-0410-ab3c-d52691b4dbfc